deployment.yml
# Ingress definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apiservice
                port:
                  number: 8080
          # - pathType: Prefix
          #   path: /
          #   backend:
          #     service:
          #       name: webfrontend
          #       port:
          #         number: 8080
